[package]
name = "update-wp"
version = "0.1.0"
edition = "2021"
description = "Update a WordPress installation, its plugins, themes and translations step-by-step, optionally backing up the database before each step and making commits after each one."
license = "BlueOak-1.0.0"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
